src/main/java/com/example/timelist/error/StudentInGroupException.java
package com.example.timelist.error;

public class StudentInGroupException extends RuntimeException{
}
